--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-# Oroyecto Wweb 1
-Este repositorio es para agregar una página web basica
+{HTML}
+{HEAD} {TITTLE} Proyecto WEB1 {/HEAD}
+{BODY} 
+         {H1} HOLA MUNDO {/H1}
+        {P} ESTE ES UN EJEMPLO DE PAGINA HTML BASICA PARA PRUEBAS {/P}
+{MARQUEE} HASTA LUEGO...          {/MARQUEE}
+
+        {/BODY}
+       
+{/HTML}
